<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">


            <EditText
                android:id="@+id/login_userid_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:maxLength="11"
                android:hint="@string/userid"
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:id="@+id/login_code_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/login_getcode_bt"
                android:hint="@string/phone_code"
                android:maxLength="6"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/login_getcode_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/get_phone_code"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_usecode_bt"
            android:layout_width="255dp"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/use_phone"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/login_useface_bt"
            android:layout_width="255dp"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/use_face"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>